fix: fix unit test
Signed-off-by: Stephane Bouchet <sbouchet@redhat.com>